= Packable --- History

== Version 1.8.5 - September 4th, 2009

In Ruby 1.9, most class methods of File accept filenames as String, or convertible via #to_str or #to_path.
File#to_path is also an alias to File#path. These have been backported.

== Version 1.8.4 - September 3rd, 2009

Added Dir.mktmpdir for older version of 1.8.6

== Version 1.8.1 - September 1st, 2009

Added the alias String#lines (Ruby 1.8.7)

== Version 1.8 - August 30, 2009

Backports can be required selectively:
* backports/1.8.7
* backports/1.9 (which include 1.8.7)
* rails

== Version 1.8 - August 30, 2009

Backports can be required selectively:
* backports/1.8.7
* backports/1.9 (which include 1.8.7)
* rails

== Version 1.7.1 - August 20, 2009

Enumerable#take and Enumerable#first(n) are now returning as soon as possible. Previously, #each was yielding one element too many. See redmine issue #1554.

== Version 1.7 - May 27, 2009

Porting all 1.8.7 features to rubinius was quite enlightening (http://blog.marc-andre.ca/2009/05/schizo-ruby-puzzle.html ).
Many improvements were made to be consistent with MRI, e.g. converting arguments using to_int if needed, etc...
The changes are now reflected in 'backports'.

Some IO and ARGF methods were missing and are now complete.

== Version 1.6.6 - April 30, 2009

Important bug fix. String#gsub is left alone until I find a good way to modify it.

== Version 1.6 - April 29, 2009

Completed backport to 1.8.7.

* Array
  * <tt>extract_options!</tt>

* Binding
  * +eval+

* Dir
  * +each+, +foreach+

* Enumerator
  * +new+
  * +with_object+
  * +next+, +rewind+

* Hash
  * Optional block for <tt>delete_if, each, each_key, each_pair, each_value, reject!, select</tt> (and ENV)

* Integer
  * moved stuff out of Fixnum
  * Optional block for +downto+, +times+, +upto+

* IO
  * Optional block for +each+, +each_line+, +each_byte+, +foreach+ (and ARGF)

* Kernel
  * +loop+, +StopIteration+
  * +__method__+, +__callee__+

* Method
  * +name+, +owner+, +receiver+
